# Stock-Trading-Automation

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPMENT.md  GLOSSARY.md  Implement.md  LICENSE  PROJECT.md  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VERSIONING.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.ps1
docs/adr/: ADR-0001-modular-architecture.md  ADR-0002-event-driven-architecture.md  ADR-0003-broker-abstraction.md  ADR-0004-postgresql-timescaledb.md  ADR-0005-redis-cache.md  ADR-0006-python-primary-language.md  ADR-0007-git-workflow.md  ADR-0008-documentation-first.md
src/sta/adapters/broker/: base.py
src/sta/api/: main.py
src/sta/api/routes/: market_data.py
src/sta/config/: settings.py
src/sta/core/: events.py  types.py
src/sta/infrastructure/: database.py  logging_config.py  redis_client.py
src/sta/infrastructure/migrations/: env.py
src/sta/infrastructure/migrations/versions/: 624f0026d103_initial_schema_instruments_market_.py
src/sta/modules/market_data/: backfiller.py  calendar.py  cold_path.py  hot_path.py  instrument_master.py  models.py  quality_gate.py  service.py
tests/integration/: conftest.py  test_backfiller.py  test_calendar.py  test_cold_path.py  test_hot_path.py  test_instrument_master.py  test_market_data_routes.py  test_market_data_service.py
tests/unit/: test_backfiller.py  test_calendar.py  test_events.py  test_quality_gate.py  test_settings.py  test_types.py
