[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sta"
version = "0.0.1"
description = "Stock Trading Automation — personal algorithmic trading platform"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    # Validation + config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Event bus + cache
    "redis[asyncio]>=5.0.0",
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    # HTTP client (broker REST API calls)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
# Install when Strategy Engine is built: pip install -e ".[indicators]"
indicators = [
    "pandas-ta>=0.3.14b0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sta"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=sta --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
